--- a/InstaFeed WatchKit Extension/Info.plist
+++ b/InstaFeed WatchKit Extension/Info.plist
@@ -27,7 +27,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>com.hemalM.InstaFeed.watchkitapp</string>
+			<string>com.hemalM.InstaFeed1.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
