--- a/InstaFeed.xcodeproj/xcshareddata/xcschemes/InstaFeed WatchKit App.xcscheme
+++ b/InstaFeed.xcodeproj/xcshareddata/xcschemes/InstaFeed WatchKit App.xcscheme
@@ -57,7 +57,7 @@
       <RemoteRunnable
          runnableDebuggingMode = "2"
          BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/WatchInsta">
+         RemotePath = "/WatchApp for Instagram Reel">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "07955009259BA2EC001CFAB9"
@@ -76,7 +76,7 @@
       <RemoteRunnable
          runnableDebuggingMode = "2"
          BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/WatchInsta">
+         RemotePath = "/WatchApp for Instagram Reel">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "07955009259BA2EC001CFAB9"
