--- a/InstaFeed.xcodeproj/xcshareddata/xcschemes/InstaFeed WatchKit App (Complication).xcscheme
+++ b/InstaFeed.xcodeproj/xcshareddata/xcschemes/InstaFeed WatchKit App (Complication).xcscheme
@@ -55,8 +55,10 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "32">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/Watch Instagram">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "07955009259BA2EC001CFAB9"
@@ -64,7 +66,7 @@
             BlueprintName = "InstaFeed WatchKit App"
             ReferencedContainer = "container:InstaFeed.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -73,8 +75,10 @@
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
       launchAutomaticallySubstyle = "32">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/Watch Instagram">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "07955009259BA2EC001CFAB9"
@@ -82,7 +86,16 @@
             BlueprintName = "InstaFeed WatchKit App"
             ReferencedContainer = "container:InstaFeed.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "07955009259BA2EC001CFAB9"
+            BuildableName = "InstaFeed WatchKit App.app"
+            BlueprintName = "InstaFeed WatchKit App"
+            ReferencedContainer = "container:InstaFeed.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
